LO/GO ETI fixes

--- a/packages/tpetra/core/src/Tpetra_ETI_LO_GO_NT.tmpl
+++ b/packages/tpetra/core/src/Tpetra_ETI_LO_GO_NT.tmpl
@@ -73,7 +73,11 @@ namespace Tpetra {
 
   TPETRA_ETI_MANGLING_TYPEDEFS()
 
+#ifdef TPETRA_ENABLE_TEMPLATE_ORDINALS 
   TPETRA_@CLASS_MACRO_NAME@_INSTANT( @LO_MANGLED_NAME@, @GO_MANGLED_NAME@, @NT_MANGLED_NAME@ )
+#else
+  TPETRA_@CLASS_MACRO_NAME@_INSTANT( @NT_MANGLED_NAME@ )
+#endif
 
 } // namespace Tpetra
 
